added html structure

--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-<script>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Mi Pair 2 Win game Pro hack</title>
+</head>
+<body>
+</body>
 
-</script>
+</html>
