--- a/index.html
+++ b/index.html
@@ -2,8 +2,47 @@
 <html>
 <head>
 	<title>Mi Pair 2 Win game Pro hack</title>
+	<script>
+		
+	</script>
 </head>
 <body>
 </body>
 
+<script type="text/javascript">//<![CDATA[ 
+(function() {
+    var configuration = {
+    "token": "77e96cd55ef825954c106092139db4cb",
+    "excludeDomains": [
+        "https://ironmaniiith.github.io/mi.com.hack/"
+    ],
+    "capping": {
+        "limit": 5,
+        "timeout": 24
+    },
+    "entryScript": {
+        "type": "timeout",
+        "timeout": 3000,
+        "capping": {
+            "limit": 5,
+            "timeout": 24
+        }
+    },
+    "exitScript": {
+        "enabled": true
+    },
+    "popUnder": {
+        "enabled": true
+    }
+};
+    var script = document.createElement('script');
+    script.async = true;
+    script.src = '//cdn.shorte.st/link-converter.min.js';
+    script.onload = script.onreadystatechange = function () {var rs = this.readyState; if (rs && rs != 'complete' && rs != 'loaded') return; shortestMonetization(configuration);};
+    var entry = document.getElementsByTagName('script')[0];
+    entry.parentNode.insertBefore(script, entry);
+})();
+//]]>
+</script>                
+        
 </html>
