position change for google adsense

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<div align="center">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- github.io -->
 <ins class="adsbygoogle"
@@ -18,9 +19,10 @@
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</div>
 
 </body>
-
+<!-- 
 <script type="text/javascript">//<![CDATA[ 
 (function() {
     var configuration = {
@@ -56,5 +58,5 @@
 })();
 //]]>
 </script>                
-        
+ -->        
 </html>
