--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
 
-<div align="center">
+<!-- <div align="center">
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- github.io -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-3400005975752584"
@@ -20,9 +19,9 @@
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
 </div>
-
+ -->
 </body>
-<!-- 
+
 <script type="text/javascript">//<![CDATA[ 
 (function() {
     var configuration = {
@@ -58,5 +57,5 @@
 })();
 //]]>
 </script>                
- -->        
+        
 </html>
