--- a/index.html
+++ b/index.html
@@ -21,40 +21,9 @@
 </div>
  -->
 </body>
-
-
-<script type="text/javascript">//<![CDATA[ 
-(function() {
-    var configuration = {
-    "token": "77e96cd55ef825954c106092139db4cb",
-    "domains": [
-        "https://ironmaniiith.github.io/mi.com.hack/"
-    ],
-    "capping": {
-        "limit": 5,
-        "timeout": 24
-    },
-    "entryScript": {
-        "type": "click",
-        "capping": {
-            "limit": 5,
-            "timeout": 24
-        }
-    },
-    "exitScript": {
-        "enabled": true
-    },
-    "popUnder": {
-        "enabled": true
+<script type="text/javascript">
+    if (document.referrer.indexOf('7huiIw') === -1 ) {
+        location.href = 'http://linkshrink.net/7huiIw';
     }
-};
-    var script = document.createElement('script');
-    script.async = true;
-    script.src = '//cdn.shorte.st/link-converter.min.js';
-    script.onload = script.onreadystatechange = function () {var rs = this.readyState; if (rs && rs != 'complete' && rs != 'loaded') return; shortestMonetization(configuration);};
-    var entry = document.getElementsByTagName('script')[0];
-    entry.parentNode.insertBefore(script, entry);
-})();
-//]]></script>                
-                
+</script>         
 </html>
