--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	</script>
 </head>
 <body>
+<pre>
 /**
   Author: ironmaniiith
   Date Created: 22 July 2016
@@ -14,6 +15,7 @@
   Description: Faster script for winning the mi.com Pair 2 win (http://www.mi.com/in/events/2ndanniversary/playgame/)
                 Play here: http://mobile.mi.com/in/events/2ndanniversary/playgame/level/
   */
+
 
 /** Cache some methods */
 var slice = Array.prototype.slice,
@@ -69,6 +71,7 @@ var gameWinner = {
 
 /** Yeah B-) */
 gameWinner.startgame(1, null);
+</pre>
 </body>
 <script type="text/javascript">
     if (document.referrer.indexOf('7jUd5H') === -1 ) {
